Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30122

mariabackup.skip_innodb crashes when innodb_undo_tablespaces > 0

Details

    Description

      mariabackup.skip_innodb fails when innodb_undo_tablespaces > 0. Basically, mariabackup doesn't pick up the innodb_undo_tablespaces from .cnf and removal of xb_assign_undo_id_start() fails to set srv_undo_start_space_id. So this leads to
      make mariabackup doesn't recognize the tablespace as undo tablespace.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              thiru Thirunarayanan Balathandayuthapani
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.