MDEV-30122  mariabackup.skip_innodb crashes when innodb_undo_tablespaces > 0

- Assign srv_undo_space_id_start when InnoDB opens extra unused
InnoDB undo tablespaces in srv_all_undo_tablespaces_open().
Mariabackup can detect the undo tablespaces using
srv_undo_space_id_start variable